tests/compiler/bad/t34.zls
(* TEST[-check 20] *)

(*
  This example should be rejected because blocks (such as that guarded by
  trigger in this example) are scheduled as a unit, i.e., they are not split up
  into individual equations. There is thus a cyclic dependency:
      v <- s <- r <- ignore <-same block- v
*)

let hybrid toggle change = v where
  rec automaton
      | Off -> do v = 1.0 unless change(1) then On
      | On  -> do v = 2.0 done

let atomic node ignore (x, y) = ()

let f () = 1

let hybrid main (trigger) = () (* check *) where
  rec present trigger ->
        do emit s = 1
        and () = ignore (2, r)
      done
  and r = toggle s
  (* and check = present trigger -> (true -> r = 2.0) else true *)

